syntax = "proto3";

option csharp_namespace = "multiplixe.compartilhador.grpc.Protos";

package multiplixe.compartilhador.grpc.Protos;

service Post {
	rpc Obter(ConsultaRequest) returns (ObterResponse);
	rpc ObterLista(ConsultaRequest) returns (ObterListaResponse);
}

message ConsultaRequest {
	string EmpresaId = 1;
	string UsuarioId = 2; 
	string PostId = 3;	
}

message ObterResponse {
	int32 HttpStatusCode = 1;
	PostMessage Post = 2;
}

message ObterListaResponse {
	int32 HttpStatusCode = 1;
	repeated PostMessage Posts = 2;
}

message PostMessage {
	string PostId = 1;					// ID do post GUID 
	string Titulo = 2;					// titulo que será exibido ao usuário da lista de post
}
 